2009-02-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Core/Banshee.Base/Tests/FileNamePatternTests.cs: Remove
	old EscapeFilename test.

2009-02-12  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena/StringUtil.cs: Patch from John Millikin
	revamping the illegal_chars array, removing a bunch of chars that should
	be fine, and making sure it escapes all chars that are invalid in FAT32,
	HFS, and ext3 (BGO #458224).  Changes by me to handle null input, and move
	the Regex creation to static init instead of lazy load.

	* src/Libraries/Hyena/Hyena/Tests/StringUtilTests.cs: Tests for the
	revamped EscapeFilename method.

2009-02-11  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/Column.cs:
	* src/Libraries/Hyena.Gui/Hyena.Data.Gui/ColumnCellText.cs: Patch from
	John Millikin (with some style fixups added in by me) that right-aligns
	the header text for right-aligned columns (BGO #560918)

2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from Andrés G. Aragoneses fixing bug with string matching functions
	that use the SQL 'like' command not escaping % and _ properly.

	* DateQueryValue.cs:
	* ExactStringQueryValue.cs:
	* IntegerQueryValue.cs:
	* NullQueryValue.cs:
	* RelativeTimeSpanQueryValue.cs:
	* TimeSpanQueryValue.cs: Change all to override the ToSql (op) instead of
	ToSql () method.

	* QueryField.cs: Call ToSql w/ the op we already have at hand.

	* QueryValue.cs: Add new abstract ToSql (op) method and change the ToSql
	method to call it with a null op.

	* StringQueryValue.cs: Fix bug with not escaping % and _ characters which
	are treated specially by SQLite in LIKE expressions (BGO #570312)

2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* build/m4/banshee/taglib.m4: Bump requirement to 2.0.3.2 (taglib-sharp
	trunk atm)

2009-02-10  Gabriel Burt  <gabriel.burt@gmail.com>

	Patch from John Millikin adding support for full/proper case-insensitive